<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/empty_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/empty_image_description"
        android:src="@drawable/search_off_24px" />

    <TextView
        android:id="@+id/empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/empty_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/empty_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/empty_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/empty_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/empty_subtitle"
        android:textSize="16sp" />

</RelativeLayout>